2006-10-20: Beta 0.0.8
	Implemented create process for Windows

2006-10-06: Beta 0.0.7
	Fixed 'openDialog' returning faulty first entry on 
	multiple files selection.
	Fixed .ndll not loading correctly with OSX 10.3.9
	
2006-09-29: Beta 0.0.6
	Implemented exe icon replacement for Windows
	Implemented browse for folder

2006-09-28: Beta 0.0.5
	APIs now returning haXe strings