@@ -17,11 +17,13 @@
 /* ************************************************************************ */
 
 #include "misc.h"
-#include <gtk/gtk.h>
 #include <neko/neko.h>
+#include <gtk/gtk.h>
+#include <gconf/gconf-client.h>
 
 void systools_misc_initialize() {
 	gtk_init(NULL,NULL);
+	gconf_init(0,NULL,NULL);
 }
 DEFINE_ENTRY_POINT(systools_misc_initialize);
 
